formatted files with prettier

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Great Idea - Responsive I</title>
@@ -22,11 +23,7 @@
         <a href="#">Contact</a>
       </nav>
       <div>
-        <img
-          class="logo"
-          src="img/logo.png"
-          alt="Great Idea! Company logo."
-        />
+        <img class="logo" src="img/logo.png" alt="Great Idea! Company logo." />
       </div>
     </header>
     <div class="top-content">
@@ -38,11 +35,7 @@
         </h1>
         <a class="button"><strong>Get Started</strong></a>
       </div>
-      <img
-        src="img/header-img.png"
-        alt="Image of a code snippet."
-        class="header-image"
-      />
+      <img src="img/header-img.png" alt="Image of a code snippet." class="header-image" />
     </div>
     <div class="main-content">
       <section class="features">
@@ -64,11 +57,7 @@
         </p>
       </section>
     </div>
-    <img
-      class="middle-img"
-      src="img/mid-page-accent.jpg"
-      alt="Image of code snippets across the screen"
-    />
+    <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen" />
     <div class="main-content">
       <section class="services">
         <h2>Services</h2>
@@ -112,4 +101,5 @@
     </footer>
   </div>
 </body>
+
 </html>
